# polyhorizon-engineering

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  POLYHORIZON.md  README.md  ROADMAP.md  SECURITY.md  public-boundary.toml  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: architecture.md  falsification.md  integration.md  philosophy.md  research.md  theory.md  threat-model.md  wire-protocol.md
examples/: README.md
examples/conformance/: digests.json
examples/forge-mutation/: charter.v1.1-candidate.json  charter.v1.json  proposal.json
examples/node/: sidecar-client.mjs
examples/python/: forge_mutation.py
schemas/: charter.schema.json  effect-receipt.schema.json  proposal.schema.json  wire.schema.json
scripts/: check_public_boundary.py  install_git_guards.py  run_public_boundary.sh
src/polyhorizon/: __init__.py  canonical.py  cli.py  errors.py  handlers.py  kernel.py  models.py  runtime.py  serde.py  store.py  wire.py
tests/: helpers.py  test_handlers_canonical.py  test_kernel.py  test_polyglot_example.py  test_public_boundary.py  test_runtime_store_wire.py  test_schemas.py  test_store_hardening.py
